# ObjectOrientedC

./: .gitignore  Bag.c  CMakeLists.txt  Makefile  New.h  Object.h  README.md  Set.c  main.c
